Added some more uniformity in theme. Added some feature images to each component. Added a custom google font

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -53,8 +53,8 @@
       <span style="font-size: 30px;" routerLink="/contact" routerLinkActive="selected-Link"><i class="fas fa-address-card"></i></span>
       <span style="font-size: 30px;" routerLink="/blog" routerLinkActive="selected-Link"><i class="fas fa-blog"></i></span>
     </div> -->
-    <div class="col-sm-10 py-2">
-      <div class="text-center aligner py-2">
+    <div class="col-sm-10">
+      <div class="text-center aligner ">
         <span style="font-size: 30px;" routerLink="/about" routerLinkActive="selected-Link"><i class="fas fa-user"></i></span>
         <span style="font-size: 30px;" routerLink="/resume" routerLinkActive="selected-Link"><i class="fas fa-file"></i></span>
         <span style="font-size: 30px;" routerLink="/works" routerLinkActive="selected-Link"><i class="fas fa-code-branch"></i></span>
@@ -66,5 +66,9 @@
       </p-scrollPanel> -->
       <router-outlet></router-outlet>
     </div>
+    <div class="row">
+      <img class="footer" src="assets/footer.jpg">
+    </div>
   </div>
+    
 </div>
