--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -1,95 +1,90 @@
 <div class="main">
     <div class="row">
-        <div class="col-sm-6">
-            <div class="my-4 py-4"><h2 >About <span style="color: rgb(130, 88, 228)">Me</span> </h2></div>
-        </div>
-        <div class="col-sm-6">
-            <img class ="about_me_img" src="assets/cs.jpg">
+        <div class="">
+            <img class ="about_me_img" src="assets/about.jpg">
         </div>
     </div>
-    <div class="row ">
-        <div class="col-sm-6">
-            <p>I'm <span style="color: rgb(130, 88, 228)">Donald</span> and I'm a<span style="color: rgb(130, 88, 228)"> Fullstack Developer</span></p>
+    
+    <div class="row sec_1">
+        <div class="col-sm-6 py-2">
+            <h4>I'm <span class="highlight">Donald</span> and I'm a<span class="highlight"> Fullstack Developer</span></h4>
             <div>
                 <p class="p-2">I am a highly competent web application software developer with 3 years’ experience developing a wide range of projects for both framework and non-framework oriented. I have proven expertise in building e-commerce and restaurant review apps. I understand the app project lifecycle in-depth and I enjoy all aspects of development from project planning to requirements gathering through to writing and testing code, creating documentation, and support. I am currently seeking long-term contract positions that will allow me to further improve and sharpen my software skills. I'm always up for new challenges and opportunities to learn more and do more.</p>
             </div>
-            <!-- <div>
-                <p class="p-4"><span>Short Background</span></p>
-                <p>After graduating as an Electrical & Electronics engineer, I decided to pursue a career in web development and since then I've never looked back. I enjoy every step of the learning and development process. I have been developing for 3 years now, back and front between a few languages and frameworks, and then I finally settled down for Angular. Since then, I have managed to acquire some experience and developed a few projects. Actively learning and developing more projects.</p>
-            </div> -->
+
         </div>
         <div class="col-sm-6">
-            <p class="p-2"><span>Short Background</span></p>
+            <h4 class="py-2"><span class="highlight">Short Background</span></h4>
             <p>After graduating as an Electrical & Electronics engineer, I decided to pursue a career in web development and since then I've never looked back. I enjoy every step of the learning and development process. I have been developing for 3 years now, back and front between a few languages and frameworks, and then I finally settled down for Angular. Since then, I have managed to acquire some experience and developed a few projects. Actively learning and developing more projects.</p>
             
         </div>
     </div>
-    <div class="my-4 py-2 text-center"><h3 >What I do</h3></div>
-    <div class="row ">
-        <div class="col-sm-6 my-2">
-            <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fab fa-angular"></i></span>
-            <div><h5 class="py-2">Angular</h5></div>
-            <div>It's been quite a study journey with angular. I like the design pattern implement by the framework, adding to the fact that its developed and maintained by google and a very rich set of third party libraries was convincing enough.</div>
-        </div>
-        <div class="col-sm-6 my-2">
-            <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fab fa-react"></i></span>
-            <div><h5 class="py-2">React</h5></div>
-            <div>Adding react to my development toolbox was yet another step towards polishing my frontend skills. I've come to appreciate and familiarize myself with JSX and react's unique way of handling application state data.With a very rich and quite diverse set of third party libraries make react development both challenging and exciting.</div>
-        </div>
-        <div class="col-sm-6 my-2">
-            <span style="font-size: 50px; color: rgb(130, 88, 228);" ><i class="fab fa-node"></i></span>
-            <div><h5 class="py-1">Node</h5></div>
-            <div>Along the way, i got tired of faking and mocking data, added to the fact that mock data is limited in flexibility, I decided to dive into nodejs. Ever since I have designed and built all my restful APIs with Node/express & Mongodb for the database, which I then fetch on client angular apps as needed...</div>
-        </div>
-        <div class="col-sm-6 my-2">
-            <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fas fa-record-vinyl"></i></span>
-            <div><h5 class="py-2">Ionic</h5></div>
-            <div>Mobile first design is undeniably a fantastic idea and I have use mobile-first libraries(PrimeNg and Bootstraps). However, the look and feel always seemed lacking(NON-NATIVE FEEL) in many ways. So I decided to get my hands dirty one more time and obviously, I went for ionics. Fantistic angular playmate and to ice the cake, its one source code, cross-platform deployment. Who can say to that? NOT ME...</div>
-        </div>
-        
-    </div>
-    <div class="my-4 py-2 text-center"><h3>Interest</h3></div>
-    <div class="row ">
-        <div class="col-sm-6 my-2 py-2 text-center " >
-            <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fas fa-laptop-code"></i></span>
-            <div><h5>Programming</h5></div>
-        </div>
-        <div class="col-sm-6 my-2 py-2 text-center" >
-            <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fas fa-book-reader"></i></span>
-            <div><h5>Reading</h5></div>
-        </div>
-        <div class="col-sm-6 my-2 py-2 text-center " >
-            <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fas fa-route"></i></span>
-            <div><h5>Travel</h5></div>
-        </div>
-        <div class="col-sm-6 my-2 py-2 text-center" >
-            <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fas fa-camera-retro"></i></span>
-            <div><h5>Photography</h5></div>
+    <div class="sec_2">
+        <div class="my-4 py-2 text-center"><h3 >What I do</h3></div>
+        <div class="row ">
+            <div class="col-sm-6 my-2">
+                <span class="icons"><i class="fab fa-angular"></i></span>
+                <div><h5 class="py-2">Angular</h5></div>
+                <div>It's been quite a study journey with angular. I like the design pattern implement by the framework, adding to the fact that its developed and maintained by google and a very rich set of third party libraries was convincing enough.</div>
+            </div>
+            <div class="col-sm-6 my-2">
+                <span class="icons"><i class="fab fa-react"></i></span>
+                <div><h5 class="py-2">React</h5></div>
+                <div>Adding react to my development toolbox was yet another step towards polishing my frontend skills. I've come to appreciate and familiarize myself with JSX and react's unique way of handling application state data.With a very rich and quite diverse set of third party libraries make react development both challenging and exciting.</div>
+            </div>
+            <div class="col-sm-6 my-2">
+                <span class="icons" ><i class="fab fa-node"></i></span>
+                <div><h5 class="py-1">Node</h5></div>
+                <div>Along the way, i got tired of faking and mocking data, added to the fact that mock data is limited in flexibility, I decided to dive into nodejs. Ever since I have designed and built all my restful APIs with Node/express & Mongodb for the database, which I then fetch on client angular apps as needed. Creating your own rest api with desired access restriction and database persistence, all asynchronously, just makes nodeJS for backend development.</div>
+            </div>
+            <div class="col-sm-6 my-2">
+                <span class="icons"><i class="fas fa-record-vinyl"></i></span>
+                <div><h5 class="py-2">Ionic</h5></div>
+                <div>Mobile first design is undeniably a fantastic idea and I have use mobile-first libraries(PrimeNg and Bootstraps). However, the look and feel always seemed lacking(NON-NATIVE FEEL) in many ways. So I decided to get my hands dirty one more time and obviously, I went for ionics. Fantistic angular playmate and to ice the cake, its one source code, cross-platform deployment. Who can say to that? NOT ME...</div>
+            </div>
+            
         </div>
     </div>
+   <div class="sec_3">
+        <div class="my-4 py-2 text-center"><h3>Interest</h3></div>
+        <div class="row ">
+            <div class="col-sm-6 my-2 py-2 text-center " >
+                <span class="icons"><i class="fas fa-laptop-code"></i></span>
+                <div><h5>Programming</h5></div>
+            </div>
+            <div class="col-sm-6 my-2 py-2 text-center" >
+                <span class="icons"><i class="fas fa-book-reader"></i></span>
+                <div><h5>Reading</h5></div>
+            </div>
+            <div class="col-sm-6 my-2 py-2 text-center " >
+                <span class="icons"><i class="fas fa-route"></i></span>
+                <div><h5>Travel</h5></div>
+            </div>
+            <div class="col-sm-6 my-2 py-2 text-center" >
+                <span class="icons"><i class="fas fa-camera-retro"></i></span>
+                <div><h5>Photography</h5></div>
+            </div>
+        </div>
+   </div>
 
+   <div class="sec_4">
     <div class="my-4 py-2 text-center"><h3 >Certificates</h3></div>
     <div class="">
-        <!-- <div class="col-sm-6 my-2 text-center">
-            <img src="assets/cs.jpg" width="100%" height="300px">
-        </div>
-        <div class="col-sm-6 my-2 text-center">
-            <img src="assets/js.jpg" width="100%" height="300px">
-        </div> -->
         <div class="my-2 py-2">
-            <span><i class="fas fa-arrow-circle-right"></i> Web Development with Angular and NodeJS</span> 
+            <span class="arrows"><i class="fas fa-arrow-circle-right"></i> Web Development with Angular and NodeJS</span> 
         </div>
         <div class="my-2 py-2">
-            <span><i class="fas fa-arrow-circle-right"></i> Full-Stack Web Development with React and NodeJS </span>
+            <span class="arrows"><i class="fas fa-arrow-circle-right"></i> Full-Stack Web Development with React and NodeJS </span>
         </div>
         <div class="my-2 py-2">
-            <span><i class="fas fa-arrow-circle-right"></i> Back End Web Development(NodeJS + Databases) Certificate</span>
+            <span class="arrows"><i class="fas fa-arrow-circle-right"></i> Back End Web Development(NodeJS + Databases) Certificate</span>
         </div>
         <div class="my-2 py-2">
-            <span><i class="fas fa-arrow-circle-right"></i> Front End Web Development Javascript Certificate</span>
+            <span class="arrows"><i class="fas fa-arrow-circle-right"></i> Front End Web Development Javascript Certificate</span>
         </div>
         <div class="my-2 py-2">
-            <span><i class="fas fa-arrow-circle-right"></i> C# and .NetFramework Certificate</span>
+            <span class="arrows"><i class="fas fa-arrow-circle-right"></i> C# and .NetFramework Certificate</span>
         </div>
     </div>
+   </div>
 </div>
