--- a/src/app/ui/resume/resume.component.html
+++ b/src/app/ui/resume/resume.component.html
@@ -1,20 +1,21 @@
 <div class="main">
-    <div class="my-4 py-4"><h2 >Working <span class="animate">Progress</span></h2></div>
+    <div class="row ">
+        <img class ="resume_img" src="assets/resume.jpg">
+    </div>
     <div class="row my-2 py-2">
         <div class="col-sm-4 ">
-           <h4>2019 - Current</h4>
+           <h4>2019 - 2020</h4>
            <p>Madformath, Toros, Mersin</p>
            <p>Frontend Developer</p>
         </div>
         <div class="col-sm-8">
             <h4>Achievements & Responsibilities</h4>
-            <p><span><i class="fas fa-arrow-circle-right"></i> Took part in the full-stack web development which involved design, development and testing.</span></p>
-            <p><span><i class="fas fa-arrow-circle-right"></i> Managed time-sensitive updates, including content changes and database upgrades.</span></p>
-            <p><span><i class="fas fa-arrow-circle-right"></i> Planned, wrote, and debugged web applications.</span></p>
+            <p><span class="arrows"><i class="fas fa-arrow-circle-right"></i> Took part in the full-stack web development which involved design, development and testing.</span></p>
+            <p><span class="arrows"><i class="fas fa-arrow-circle-right"></i> Managed time-sensitive updates, including content changes and database upgrades.</span></p>
+            <p><span class="arrows"><i class="fas fa-arrow-circle-right"></i> Planned, wrote, and debugged web applications.</span></p>
         </div>
         
     </div>
-    <div></div>
     <div class="row my-2 py-2">
         <div class="col-sm-4 ">
            <h4>2017 - 2019</h4>
@@ -23,7 +24,7 @@
         </div>
         <div class="col-sm-8">
             <h4>Objectives & Responsibilities</h4>
-            <p><span><i class="fas fa-arrow-circle-right"></i> With over 2 years as Lab coordination's assistant, I have acquired the team work and management skills sortout by the software and related industries.</span></p>
+            <p><span class="arrows"><i class="fas fa-arrow-circle-right"></i> With over 2 years as Lab coordination's assistant, I have acquired the team work and management skills sortout by the software and related industries.</span></p>
         </div>
     </div>
     <div></div>
@@ -35,11 +36,11 @@
          </div>
          <div class="col-sm-8">
              <h4>Internship Goal & Achievement</h4>
-             <p><span><i class="fas fa-arrow-circle-right"></i> Six months at Cameroon's biggest power plant, with the best engineers in the country, I learnt under the supervision of the best. Some of the skils I developed include; Engineering patterns, team work and task management.</span></p>
+             <p><span class="arrows"><i class="fas fa-arrow-circle-right"></i> Six months at Cameroon's biggest power plant, with the best engineers in the country, I learnt under the supervision of the best. Some of the skills i gained include; Engineering patterns, team work and task management.</span></p>
          </div>
     </div>
 
-    <div class="mt-2">
+    <div class="mt-2 download_buttons">
         <button class="btn btn-outline-primary m-2"><a class="whitener" href="assets/DonaldTeghen_N.pdf" download="DonaldTeghen_N.pdf">Download Normal CV</a></button>
         <button class="btn btn-outline-primary m-2"><a class="whitener" href="assets/DonalTeghen_F.pdf" download="DonalTeghen_F.pdf">Download Fancy CV</a></button>
     </div>
@@ -86,7 +87,7 @@
              
         </div>
         <div class="col-sm-6">
-            <h3 class="py-2">FrameWorks Knowledge</h3>
+            <h3 class="py-2">Framework Knowledge</h3>
             <div class="my-4 py-2">
                 <h5>Angular</h5>
                  <div class="progress">
@@ -134,7 +135,7 @@
         
     </div>
 
-    <div class="row my-4">
+    <div class="row my-4 sec_db">
         
         <div class="col-sm-6">
             <h3 class="py-2">DataBase Knowledge</h3>
