--- a/src/app/ui/works/works.component.html
+++ b/src/app/ui/works/works.component.html
@@ -1,8 +1,12 @@
 <div class="my-4">
-    <div class="my-4"><h2 >Creative<span class="animate"> Projects</span></h2></div>
+  <div class="row ">
+    <img class ="work_img" src="assets/work.jpg">
+</div>
+    <div class="my-4"><h2 >Sample<span class="animate"> Projects</span></h2></div>
     <div class="d-flex my-2">
         <span class="p-shadow-1 py-2 px-4 mr-2" (click)="select()">All</span>
         <span class="p-shadow-1 py-2 px-4 mr-2" (click)="select('Angular')">Angular</span>
+        <span class="p-shadow-1 py-2 px-4 mr-2" (click)="select('React')">React</span>
         <span class="p-shadow-1 py-2 px-4 mr-2" (click)="select('NodeJS')">Node</span>
         <span class="p-shadow-1 py-2 px-4 mr-2" (click)="select('Ionic')">Ionic</span>
         <span class="p-shadow-1 py-2 px-4 mr-2" (click)="select('Others')">Others</span>
@@ -21,4 +25,5 @@
             </div>
           </div>
         </div>
+    </div>
 </div>
