--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,14 +2,14 @@
 .dash_link{
     width: 100%;
     height: 80px; 
-    background-color: #343A40;
+    background-color: #0d2247;
     color: white;
     margin-top: 2px;
     margin-bottom: 2px;
     
 }
 div.col-2{
-    background-color: black;
+    background-color:#0A162C;
 }
 div>a{
     text-decoration: none;
@@ -31,7 +31,7 @@ div>a{
 }
 
 .selected-Link{
-    background-color: black;
+    background-color: #14397e;
     color: white;
     border: none !important;
 }
@@ -62,3 +62,7 @@ div>a{
         display: none;
     }
  }
+ .footer{
+    width: 100%;
+    height: 400px;
+  }
