--- a/src/app/ui/about/about.component.css
+++ b/src/app/ui/about/about.component.css
@@ -1,12 +1,34 @@
 h3{
     text-decoration: underline;
-    text-decoration-color: rgb(35, 21, 87); 
+    text-decoration-color: #4715F2; 
     text-decoration-style: solid;
     text-decoration-thickness: 10px;
 }
+.highlight{
+  color:#4715F2;
+}
 .about_me_img{
   width: 100%;
-  height: 200px;
+  height: 600px;
+}
+.arrows>i{
+  color:  #4715F2; 
+}
+span.icons{
+  color: #4715F2;
+  font-size: 50px;
+}
+.sec_1{
+  background-color: rgb(255, 255, 255);
+}
+.sec_2{
+  background-color: rgb(226, 233, 238);
+}
+.sec_3{
+  background-color: rgb(255, 255, 255);
+}
+.sec_4{
+  background-color: rgb(225, 230, 235);
 }
 /* p, h2, h3, h4, h5, div{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
