--- a/src/app/ui/contact/contact.component.css
+++ b/src/app/ui/contact/contact.component.css
@@ -1,21 +1,38 @@
 h3{
     text-decoration: underline;
-    text-decoration-color: rgb(35, 21, 87); 
+    text-decoration-color: #0A162C; 
     text-decoration-style: solid;
     text-decoration-thickness: 10px;
 }
-
-p, h2, h3, h4, h5, div{
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+.contact_img{
+  /* display: block;
+  position: absolute;
+  left: 0;
+  top: 0; */
+  width: 100%;
+  height: 300px;
+  /* opacity: 0.8; */
 }
+.sub_but{
+  background-color:#0A162C ;
+  color: white;
+}
+
+/* .contact_img{
+  width: 100%;
+  height: 600px;
+} */
+/* p, h2, h3, h4, h5, div{
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+} */
 span {
     animation: color-change 3s infinite;
   }
   
   @keyframes color-change {
-    0% { color: rgb(45, 35, 83); }
-    50% { color: rgb(180, 13, 158); }
-    100% { color: rgb(19, 226, 216); }
+    0% { color: #0A162C }
+    50% { color: #153879; }
+    100% { color: #4984f3; }
   }
 
   
