--- a/src/app/ui/resume/resume.component.css
+++ b/src/app/ui/resume/resume.component.css
@@ -5,8 +5,29 @@ h3{
     text-decoration-thickness: 10px;
 }
 
-p, h2, h3, h4, h5, div{
+/* p, h2, h3, h4, h5, div{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+} */
+.whitener{
+  text-decoration: none !important;
+}
+.download_buttons{
+  text-align: center;
+  background-color: #12326D;
+}
+.sec_db{
+  background-color: rgb(225, 227, 238);
+}
+.resume_img{
+  width: 100%;
+  height: 400px;
+}
+.arrows>i{
+  color:  #4715F2; 
+}
+span.icons{
+  color: #4715F2;
+  font-size: 50px;
 }
 /* span {
     animation: color-change 3s infinite;
