--- a/src/app/ui/works/works.component.css
+++ b/src/app/ui/works/works.component.css
@@ -4,7 +4,10 @@
 .container {
     position: relative;
   }
-  
+  .work_img{
+    width: 100%;
+    height: 400px;
+  }
   .image {
     opacity: 1;
     transition: .5s ease;
@@ -26,7 +29,7 @@
   }
   h3{
     text-decoration: underline;
-    text-decoration-color: rgb(35, 21, 87); 
+    text-decoration-color: #4715F2; 
     text-decoration-style: solid;
     text-decoration-thickness: 10px;
 }
@@ -39,7 +42,7 @@ span, strong {
   }
   
   @keyframes color-change {
-    0% { color: rgb(45, 35, 83); }
-    50% { color: rgb(180, 13, 158); }
-    100% { color: rgb(19, 226, 216); }
+    0% { color: #4715F2; }
+    50% { color: #4c3aee; }
+    100% { color: #9d85ee; }
   }
