--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Chango&family=Roboto+Slab&display=swap');
 
 body{
-  font-family:cursive;
-  /* background-image: url(); */
+  /* font-family:cursive;
+  font-size: 18px; */
+
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+    font-size: 16px;
+  /* background-image: url();
   background-color: #0c1414;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
+    position: relative; */
     
 }
