--- a/src/app/ui/resume/resume.component.html
+++ b/src/app/ui/resume/resume.component.html
@@ -10,7 +10,7 @@
         </div>
         <div class="col-sm-8">
             <h4>Achievements & Responsibilities</h4>
-            <p><span class="arrows"><i class="fas fa-arrow-circle-right"></i> Took part in the full-stack web development which involved design, development and testing.</span></p>
+            <p><span class="arrows"><i class="fas fa-arrow-circle-right"></i> I participated in the full-stack web development which involved design, development and testing.</span></p>
             <p><span class="arrows"><i class="fas fa-arrow-circle-right"></i> Managed time-sensitive updates, including content changes and database upgrades.</span></p>
             <p><span class="arrows"><i class="fas fa-arrow-circle-right"></i> Planned, wrote, and debugged web applications.</span></p>
         </div>
@@ -36,7 +36,7 @@
          </div>
          <div class="col-sm-8">
              <h4>Internship Goal & Achievement</h4>
-             <p><span class="arrows"><i class="fas fa-arrow-circle-right"></i> Six months at Cameroon's biggest power plant, with the best engineers in the country, I learnt under the supervision of the best. Some of the skills i gained include; Engineering patterns, team work and task management.</span></p>
+             <p><span class="arrows"><i class="fas fa-arrow-circle-right"></i> Six months at Cameroon's biggest power plant, with the best engineers in the country, I learned under the supervision of the best. Some of the skills I gained include; Engineering patterns, team work and task management.</span></p>
          </div>
     </div>
 
