--- a/src/app/ui/works/works.component.html
+++ b/src/app/ui/works/works.component.html
@@ -20,7 +20,7 @@
               <h5 class="card-title">{{work.title}}</h5>
               <div class="my-2 py-2">
                 <button class="btn btn-primary float-left" (click)="goToPage(work.gitUrl)"><span><i class="fas fa-code-branch"></i></span> Get Source Code</button>
-                <button class="btn btn-primary float-right" (click)='open()'><span><i class="fab fa-youtube"></i></span> Watch Demo</button>
+                <button *ngIf="work.videoID" class="btn btn-primary float-right" (click)='open(work.videoID)'><span><i class="fab fa-youtube"></i></span> Watch Demo</button>
               </div>
             </div>
           </div>
