Added Profile picture

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
       <div class="text-center">
         <div class="dark_link p-1" routerLink="/home" routerLinkActive="selected-Link">
           <div class="rounded-circle bg-dark ">
-            <img class="rounded-circle py-2" src="https://source.unsplash.com/weekly?sky" alt="Donald" width="90%" height="auto">
+            <img class="rounded-circle py-2" src="assets/me.jpg" alt="Donald" width="90%" height="auto">
           </div>
           <h5 class="name_on_image">Donald Teghen</h5>
         </div>
